table overlaps fix

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -713,6 +713,7 @@ table {
   border-radius: 12px;
   border: 1px solid #E5E7EB;
   width: fit-content;
+  max-width: 100%;
   font-size: .9375rem;
 }
 table thead {
@@ -732,6 +733,7 @@ table thead tr th, table tbody tr td {
   border-right: 1px solid #E5E7EB;
   border-bottom: 1px solid #E5E7EB;
 }
+
 table thead tr th:last-child, table tbody tr td:last-child {
   border-right: 0 !important;
 }
